ffm: disable adjust_write_index()

This code can in its current form not work with ffserver
Fixes Ticket1249

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>